feat: added documentation for listOpenings
